pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-3
  labels:
    app: backend
spec:
  containers:
    - name: cont
      image: imjk04/e-com:electronics
      ports:
        - containerPort: 5000
